<!--
  ~ menu_main.xml
  ~
  ~ Created by Berthold Fritz
  ~
  ~ This work is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License:
  ~ https://creativecommons.org/licenses/by-nc-sa/4.0/
  ~
  ~ Last modified 9/3/18 8:27 AM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="berthold.funwithregex.MainActivity">

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/load"
        android:orderInCategory="100"
        android:title="@string/load"
        app:showAsAction="never" />
    <item
        android:id="@+id/save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="never" />
</menu>
