<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="berthold.funwithregex.RegexPicker">

    <!-- This is a "fake layout" which surpresses keyboard to pop up -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/colorShellOutput"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <CheckBox
            android:id="@+id/attach_regex"
            android:paddingTop="20dp"
            android:textColor="@color/shellText"
            android:text="@string/save_attach_regex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/attach_result"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/shellText"
            android:text="@string/save_attach_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:background="@color/colorSepparator"
            android:layout_height="5dp"/>

        <!-- This is cool! Put any view hierarchy inside a scrollView if it is to big to fit
        onto the screen. Scroll View let's you scroll th whole view hierarchy.... -->

        <ScrollView
            android:layout_width="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sample_of_saved_text"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:textColor="@color/shellText"
                    android:hint="@string/save_sample_text_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/save_progress"
                    android:visibility="invisible"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:background="@color/colorSepparator"
            android:layout_height="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
           <ImageButton
               android:id="@+id/save_text_localy"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@android:drawable/ic_menu_save"/>

            <ImageButton
                android:id="@+id/send_by_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_dialog_email"/>
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>